# MFCC_CMAKE

./: CMakeLists.txt  main.c
include/: _kiss_fft_guts.h  augmentation.h  filter.h  gemm.h  kiss_fft.h  mfcc.h  record.h  svm.h  svm2.h  syll_fragmentation.h  utils.h
src/: augmentation.c  filter.c  gemm.c  kiss_fft.c  mfcc.c  record.c  svm.c  svm2.cpp  syll_fragmentation.c  utils.c
